--- a/en-us/config.json
+++ b/en-us/config.json
@@ -18,9 +18,9 @@
   {
     "game": "Prototype",
     "save": "%USERPROFILE%\\Documents\\Prototype"
-  }
+  },
   {
     "game": "Dynasty Warriors 9 Empires",
-    "save": "%USERPROFILE%\\Documents\\\KoeiTecmo\\Dynasty Warriors 9 Empires"
+    "save": "%USERPROFILE%\\Documents\\KoeiTecmo\\Dynasty Warriors 9 Empires"
   }
 ]
