--- a/zh-cn/config.json
+++ b/zh-cn/config.json
@@ -18,9 +18,9 @@
   {
     "game": "虐杀原形",
     "save": "%USERPROFILE%\\Documents\\Prototype"
-  }
+  },
   {
     "game": "真三国无双8：帝国",
-    "save": "%USERPROFILE%\\Documents\\\KoeiTecmo\\Dynasty Warriors 9 Empires"
+    "save": "%USERPROFILE%\\Documents\\KoeiTecmo\\Dynasty Warriors 9 Empires"
   }
 ]
