--- a/en-us/config.json
+++ b/en-us/config.json
@@ -24,6 +24,10 @@
     "save": "%USERPROFILE%\\Documents\\KoeiTecmo\\Dynasty Warriors 9 Empires"
   },
   {
+    "game": "Warriors Orochi 4",
+    "save": "%USERPROFILE%\\Documents\\KoeiTecmo\\WARRIORS OROCHI 4"
+  },
+  {
     "game": "Shin Sangokumusou 5",
     "save": "%USERPROFILE%\\Documents\\KOEI\\Shin Sangokumusou 5"
   }
