--- a/zh-cn/config.json
+++ b/zh-cn/config.json
@@ -24,6 +24,10 @@
     "save": "%USERPROFILE%\\Documents\\KoeiTecmo\\Dynasty Warriors 9 Empires"
   },
   {
+    "game": "无双大蛇3",
+    "save": "%USERPROFILE%\\Documents\\KoeiTecmo\\WARRIORS OROCHI 4"
+  },
+  {
     "game": "真三国无双5",
     "save": "%USERPROFILE%\\Documents\\KOEI\\Shin Sangokumusou 5"
   }
