增加目录忽略功能

--- a/en-us/config.json
+++ b/en-us/config.json
@@ -34,5 +34,12 @@
   {
     "game": "They Are Billions",
     "save": "%USERPROFILE%\\Documents\\My Games\\They Are Billions"
+  },
+  {
+    "game": "Oxygen Not Included",
+    "save": "%USERPROFILE%\\Documents\\Klei\\OxygenNotIncluded",
+    "ignore": [
+        "%USERPROFILE%\\Documents\\Klei\\OxygenNotIncluded\\RetiredColonies"
+    ]
   }
 ]
