--- a/zh-cn/config.json
+++ b/zh-cn/config.json
@@ -34,5 +34,12 @@
   {
     "game": "亿万僵尸",
     "save": "%USERPROFILE%\\Documents\\My Games\\They Are Billions"
+  },
+  {
+    "game": "缺氧",
+    "save": "%USERPROFILE%\\Documents\\Klei\\OxygenNotIncluded",
+    "ignore": [
+        "%USERPROFILE%\\Documents\\Klei\\OxygenNotIncluded\\RetiredColonies"
+    ]
   }
 ]
